salesforce/force-app/main/default/objects/SR_Intake__c/SR_Intake__c.object-meta.xml
<CustomObject>
    <description>Pre-Strategic-Review client intake survey. Sent to clients before an SR (Meeting Type "Strategic Review Meeting 1/2") to surface business opportunities (rollovers, windfalls, held-away accounts, income needs) and emotional drivers on the front hand. Built from Brent Thompson's 2026-05-21 SR process feedback.</description>
    <label>SR Intake</label>
    <pluralLabel>SR Intakes</pluralLabel>
    <nameField>
        <displayFormat>SRI-{00000}</displayFormat>
        <label>SR Intake #</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>