salesforce/force-app/main/default/objects/SR_Intake__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SR Intakes</relationshipLabel>
    <relationshipName>SR_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>