salesforce/force-app/main/default/objects/SR_Intake__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>SR Intakes</relationshipLabel>
    <relationshipName>SR_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>