salesforce/force-app/main/default/objects/SR_Intake__c/fields/Concern_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Concern_Legacy__c</fullName>
    <label>Concern: Legacy / Estate</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>