salesforce/force-app/main/default/objects/SR_Intake__c/fields/Concern_Market_Volatility__c.field-meta.xml
<CustomField>
    <fullName>Concern_Market_Volatility__c</fullName>
    <label>Concern: Market Volatility</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>