salesforce/force-app/main/default/objects/SR_Intake__c/fields/Concern_Not_Growing_Enough__c.field-meta.xml
<CustomField>
    <fullName>Concern_Not_Growing_Enough__c</fullName>
    <label>Concern: Not Growing Enough / FOMO</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>