salesforce/force-app/main/default/objects/SR_Intake__c/fields/Concern_Running_Out_Of_Money__c.field-meta.xml
<CustomField>
    <fullName>Concern_Running_Out_Of_Money__c</fullName>
    <label>Concern: Running Out of Money / Income</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>