salesforce/force-app/main/default/objects/SR_Intake__c/fields/Concern_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Concern_Taxes__c</fullName>
    <label>Concern: Taxes</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>