salesforce/force-app/main/default/objects/SR_Intake__c/fields/Expecting_Windfall__c.field-meta.xml
<CustomField>
    <fullName>Expecting_Windfall__c</fullName>
    <label>Expecting Inheritance or Windfall</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>