salesforce/force-app/main/default/objects/SR_Intake__c/fields/Has_Employer_Plan_To_Review__c.field-meta.xml
<CustomField>
    <fullName>Has_Employer_Plan_To_Review__c</fullName>
    <label>Has Employer Plan (401k/403b) to Review</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>