salesforce/force-app/main/default/objects/SR_Intake__c/fields/Has_Held_Away_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Has_Held_Away_Accounts__c</fullName>
    <label>Has Held-Away Accounts</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>