salesforce/force-app/main/default/objects/SR_Intake__c/fields/Held_Away_Notes__c.field-meta.xml
<CustomField>
    <fullName>Held_Away_Notes__c</fullName>
    <label>Held-Away Account Notes</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>