salesforce/force-app/main/default/objects/SR_Intake__c/fields/Income_Plan_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Income_Plan_Confidence__c</fullName>
    <label>Confidence in Retirement Income Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Very confident</fullName><default>false</default><label>Very confident</label></value>
            <value><fullName>Somewhat confident</fullName><default>false</default><label>Somewhat confident</label></value>
            <value><fullName>Not confident</fullName><default>false</default><label>Not confident</label></value>
            <value><fullName>Unsure</fullName><default>false</default><label>Unsure</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>