salesforce/force-app/main/default/objects/SR_Intake__c/fields/Life_Changes__c.field-meta.xml
<CustomField>
    <fullName>Life_Changes__c</fullName>
    <label>Major Life Changes Since Last Meeting</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>