salesforce/force-app/main/default/objects/SR_Intake__c/fields/Retirement_Timing__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Timing__c</fullName>
    <label>Retirement Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Already retired</fullName><default>false</default><label>Already retired</label></value>
            <value><fullName>Planning to retire within 12 months</fullName><default>false</default><label>Planning to retire within 12 months</label></value>
            <value><fullName>In 1-3 years</fullName><default>false</default><label>In 1-3 years</label></value>
            <value><fullName>No plans to retire soon</fullName><default>false</default><label>No plans to retire soon</label></value>
            <value><fullName>Prefer not to say</fullName><default>false</default><label>Prefer not to say</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>