salesforce/force-app/main/default/objects/SR_Intake__c/fields/Strategic_Review_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Review_Meeting__c</fullName>
    <label>Strategic Review Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>SR Intakes</relationshipLabel>
    <relationshipName>SR_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>