salesforce/force-app/main/default/objects/SR_Intake__c/fields/Top_Concern__c.field-meta.xml
<CustomField>
    <fullName>Top_Concern__c</fullName>
    <label>Biggest Financial Concern</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>