salesforce/force-app/main/default/objects/SR_Intake__c/fields/Topics_To_Cover__c.field-meta.xml
<CustomField>
    <fullName>Topics_To_Cover__c</fullName>
    <label>Topics to Cover in This Review</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>