salesforce/force-app/main/default/objects/SR_Intake__c/fields/Windfall_Amount_Range__c.field-meta.xml
<CustomField>
    <fullName>Windfall_Amount_Range__c</fullName>
    <label>Windfall Amount Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Under $100k</fullName><default>false</default><label>Under $100k</label></value>
            <value><fullName>$100k - $499k</fullName><default>false</default><label>$100k - $499k</label></value>
            <value><fullName>$500k - $999k</fullName><default>false</default><label>$500k - $999k</label></value>
            <value><fullName>$1M+</fullName><default>false</default><label>$1M+</label></value>
            <value><fullName>Unsure</fullName><default>false</default><label>Unsure</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>