salesforce/force-app/main/default/objects/SR_Intake__c/fields/Windfall_Notes__c.field-meta.xml
<CustomField>
    <fullName>Windfall_Notes__c</fullName>
    <label>Windfall Notes</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>